--- a/template.html
+++ b/template.html
@@ -2,12 +2,12 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Hello world!</title>
+    <title></title>
 </head>
 <body>
 <h1 style="text-align: center">Календарь ухода</h1>
 <div>
-        {{#each notifications}}
+        {{#each reminders}}
         <h3>{{this.formattedDate}}</h3>
         <table style="
                     width: 100%;
