Reset password fixes

--- a/changePassword.html
+++ b/changePassword.html
@@ -124,7 +124,7 @@
 <body>
     <div class="mainDiv">
         <div class="cardStyle">
-            <div name="signupForm" id="signupForm">
+            <div action="#" name="signupForm" id="signupForm">
 
                 <img src="" id="signupLogo"/>
 
@@ -137,7 +137,6 @@
                 </h4>
 
                 <h4 id="errorMessage" class="errorMessage">
-                    Запросите новую ссылку для восстановления
                 </h4>
 
                 <div class="inputDiv">
@@ -175,27 +174,26 @@
   const email = urlParams.get('email');
 
   function validatePassword() {
+    console.log('validatePassword')
     if(password.value.length === 0) {
-      password.setCustomValidity("Заполните пожалуйста поле");
+      errorMessage.innerHTML = 'Заполните пожалуйста все поля';
+      errorMessage.style.display = "block";
       return false;
     }
     else if(password.value.length < 6) {
-      password.setCustomValidity("Пароль должен быть минимум 6 символов");
+      errorMessage.innerHTML = 'Пароль должен быть минимум 6 символов';
+      errorMessage.style.display = "block";
       return false;
     }
     else if(password.value != confirm_password.value) {
-      confirm_password.setCustomValidity("Пароли не совпадают");
-      password.setCustomValidity('');
+      errorMessage.innerHTML = 'Пароли не совпадают';
+      errorMessage.style.display = "block";
       return false;
     } else {
-      password.setCustomValidity('');
-      confirm_password.setCustomValidity('');
+      errorMessage.style.display = "none";
       return true;
     }
   }
-
-  password.onchange = validatePassword;
-  confirm_password.onkeyup = validatePassword;
 
   function enableSubmitButton() {
     document.getElementById('submitButton').disabled = false;
@@ -227,6 +225,7 @@
       }
 
       if (this.readyState == 4 && this.status == 404) {
+        errorMessage.innerHTML = 'Запросите новую ссылку для восстановления';
         errorMessage.style.display = "block";
         enableSubmitButton();
       }
