--- a/caringSurvey.html
+++ b/caringSurvey.html
@@ -9,7 +9,7 @@
     <div style="align-items: center;flex-direction: column;text-align: center;">
         <img src="data:image/png;base64,{{logo}}"/>
         <div>Elderly Care</div>
-        <div>План содействия в оказании помощи пожилому человеку, основанный на индивидуальной оценке потребностей (на каждой странице отчета)</div>
+        <div>План содействия в оказании помощи пожилому человеку, основанный на индивидуальной оценке потребностей</div>
         <div>{{today}}</div>
     </div>
     <div style="margin-top: 40px">
