--- a/caringSurvey.html
+++ b/caringSurvey.html
@@ -36,9 +36,37 @@
             <div style="margin-top: 10px">
                 <h3 style="text-align: center;">{{this.title}}</h3>
                 {{#each this.list}}
-                <div style="padding-bottom:
-
-                 10px;">{{this}}</div>
+                    {{#ifCond this.key "===" "text"}}
+                        <div style="padding-bottom:10px;">{{this.value}}</div>
+                    {{/ifCond}}
+                    {{#ifCond this.key "===" "tcson_link"}}
+                        <div style="padding-bottom:10px;">
+                            {{#each this.value}}
+                            {{#ifCond @index "===" 1}}
+                            <a href="https://belbsi.by/">
+                                {{this}}
+                            </a>
+                            {{/ifCond}}
+                            {{#ifCond @index "!==" 1}}
+                            {{this}}
+                            {{/ifCond}}
+                            {{/each}}
+                        </div>
+                    {{/ifCond}}
+                    {{#ifCond this.key "===" "psihLink"}}
+                        <div style="padding-bottom:10px;">
+                            {{#each this.value}}
+                            {{#ifCond @index "===" 1}}
+                            <a href="https://mhcenter.by/karta-uslug/?service-type=%D0%9F%D1%81%D0%B8%D1%85%D0%BE%D0%BB%D0%BE%D0%B3%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%B0%D1%8F+%D0%BF%D0%BE%D0%BC%D0%BE%D1%89%D1%8C&sort=latest">
+                                {{this}}
+                            </a>
+                            {{/ifCond}}
+                            {{#ifCond @index "!==" 1}}
+                            {{this}}
+                            {{/ifCond}}
+                            {{/each}}
+                        </div>
+                    {{/ifCond}}
                 {{/each}}
             </div>
             {{/ifCond}}
